--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
 <body>
   <main>
     <div class="container">
-      <picture>
-      <img src="images/image-qr-code.png" alt="qr-code" />
-      </picture>
+      <img src="images/image-qr-code.png" alt="qr-code to visit Frontend Mentor" />
       <h1>Improve your front-end skills by building projects</h1>
       <p>
         Scan the QR code to visit Frontend Mentor and take your coding skills
